[gd_scene load_steps=11 format=3 uid="uid://byhx4nqhp22jo"]

[ext_resource type="Script" uid="uid://c4e02x7hylkmt" path="res://model/main_menu/main_menu.gd" id="1_ngrdv"]
[ext_resource type="Texture2D" uid="uid://cl6ubdvrne04k" path="res://assets/menu_pictures/background.jpg" id="2_olpy7"]
[ext_resource type="Texture2D" uid="uid://o733whwy2vr8" path="res://assets/button/main_button/button.png" id="3_kxc1c"]
[ext_resource type="Texture2D" uid="uid://3lhq2yd4r5q4" path="res://assets/button/main_button/button_click.png" id="4_w7ty5"]
[ext_resource type="Texture2D" uid="uid://dnfig8oii5wci" path="res://assets/button/main_button/button_hover.png" id="5_7a01j"]
[ext_resource type="Script" uid="uid://djv63s70hb3cg" path="res://model/button/masked_button.gd" id="6_5id5m"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="7_n77rl"]
[ext_resource type="Texture2D" uid="uid://de6nk4m5jdrro" path="res://assets/menu_pictures/game_logo.png" id="8_ss4sa"]
[ext_resource type="AudioStream" uid="uid://k2l4hck1y7oc" path="res://assets/sounds/musics/main_theme_music.mp3" id="9_jqfgn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.294118, 0.635294, 0.721569, 0.603922)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ngrdv")

[node name="TRectBackground" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_olpy7")

[node name="PanelGameMenu" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.45
anchor_top = 0.531
anchor_right = 0.55
anchor_bottom = 0.6226667
offset_left = -390.0
offset_top = -329.48004
offset_right = 390.0
offset_bottom = 328.51996
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_06t4h")
metadata/_edit_use_anchors_ = true

[node name="TButtonNewGame" type="TextureButton" parent="PanelGameMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.26144072
anchor_right = 0.5
anchor_bottom = 0.26144072
offset_left = -154.0
offset_top = 45.08937
offset_right = 146.0
offset_bottom = 195.08937
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_kxc1c")
texture_pressed = ExtResource("4_w7ty5")
texture_hover = ExtResource("5_7a01j")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_5id5m")

[node name="LabelNewGame" type="Label" parent="PanelGameMenu/TButtonNewGame"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43093923
anchor_top = 0.40304717
anchor_right = 0.5718232
anchor_bottom = 0.7695393
offset_left = -74.0
offset_top = -33.48201
offset_right = 74.0
offset_bottom = 33.51799
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n77rl")
theme_override_font_sizes/font_size = 25
text = "Nouvelle
partie"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TButtonContinue" type="TextureButton" parent="PanelGameMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.26144072
anchor_right = 0.5
anchor_bottom = 0.26144072
offset_left = -154.0
offset_top = -106.91063
offset_right = 146.0
offset_bottom = 43.08937
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_kxc1c")
texture_pressed = ExtResource("4_w7ty5")
texture_hover = ExtResource("5_7a01j")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_5id5m")

[node name="LabelContinue" type="Label" parent="PanelGameMenu/TButtonContinue"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35911602
anchor_top = 0.42660737
anchor_right = 0.6325967
anchor_bottom = 0.7930995
offset_left = -74.0
offset_top = -33.48201
offset_right = 74.0
offset_bottom = 33.51799
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n77rl")
theme_override_font_sizes/font_size = 34
text = "CONTINUER"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TButtonOptions" type="TextureButton" parent="PanelGameMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5440792
anchor_right = 0.5
anchor_bottom = 0.5440792
offset_left = -154.0
offset_top = -18.867981
offset_right = 146.0
offset_bottom = 131.13205
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_kxc1c")
texture_pressed = ExtResource("4_w7ty5")
texture_hover = ExtResource("5_7a01j")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_5id5m")

[node name="LabelOptions" type="Label" parent="PanelGameMenu/TButtonOptions"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.61776435
anchor_right = 0.5
anchor_bottom = 0.6177644
offset_left = -95.0
offset_top = -33.492996
offset_right = 95.0
offset_bottom = 33.506996
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n77rl")
theme_override_font_sizes/font_size = 34
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TButtonExit" type="TextureButton" parent="PanelGameMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.81500006
anchor_right = 0.5
anchor_bottom = 0.81500006
offset_left = -154.0
offset_top = -73.95502
offset_right = 146.0
offset_bottom = 76.04498
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_kxc1c")
texture_pressed = ExtResource("4_w7ty5")
texture_hover = ExtResource("5_7a01j")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_5id5m")

[node name="LabelExit" type="Label" parent="PanelGameMenu/TButtonExit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.61776435
anchor_right = 0.5
anchor_bottom = 0.6177644
offset_left = -95.0
offset_top = -33.492996
offset_right = 95.0
offset_bottom = 33.506996
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n77rl")
theme_override_font_sizes/font_size = 34
text = "QUITTER"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TRectGameLogo" type="TextureRect" parent="PanelGameMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.024
anchor_right = 0.5
anchor_bottom = -0.024
offset_left = -375.0
offset_top = -77.208
offset_right = -251.33331
offset_bottom = -51.374664
scale = Vector2(6, 6)
texture = ExtResource("8_ss4sa")
metadata/_edit_use_anchors_ = true

[node name="PanelVersion" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.0615
anchor_top = 0.9377778
anchor_right = 0.0615
anchor_bottom = 0.9377778
offset_left = -92.08
offset_top = -36.80011
offset_right = 92.92
offset_bottom = 37.19995
theme_override_styles/panel = SubResource("StyleBoxFlat_06t4h")
metadata/_edit_use_anchors_ = true

[node name="LabelVersion" type="Label" parent="PanelVersion"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.574
anchor_right = 0.508
anchor_bottom = 0.574
offset_left = -73.98
offset_top = -33.476036
offset_right = 74.02
offset_bottom = 33.523964
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n77rl")
theme_override_font_sizes/font_size = 38
text = "v 1.0.0"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayerMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_jqfgn")
volume_db = -2.0
autoplay = true
bus = &"Music"

[node name="TButtonTuto" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5440792
anchor_right = 0.5
anchor_bottom = 0.5440792
offset_left = 576.0
offset_top = -568.6055
offset_right = 938.0
offset_bottom = -377.60553
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_kxc1c")
texture_pressed = ExtResource("4_w7ty5")
texture_hover = ExtResource("5_7a01j")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_5id5m")

[node name="LabelTuto" type="Label" parent="TButtonTuto"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.61776435
anchor_right = 0.5
anchor_bottom = 0.6177644
offset_left = -95.0
offset_top = -33.492996
offset_right = 95.0
offset_bottom = 33.506996
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n77rl")
theme_override_font_sizes/font_size = 38
text = "TUTO"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TButtonCredits" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.9140001
anchor_top = 0.92700005
anchor_right = 0.9140001
anchor_bottom = 0.92700005
offset_left = -119.88013
offset_top = -63.160034
offset_right = 119.11987
offset_bottom = 63.839966
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_kxc1c")
texture_pressed = ExtResource("4_w7ty5")
texture_hover = ExtResource("5_7a01j")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_5id5m")
metadata/_edit_use_anchors_ = true

[node name="LabelCredits" type="Label" parent="TButtonCredits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50415903
anchor_top = 0.622252
anchor_right = 0.50415903
anchor_bottom = 0.622252
offset_left = -62.494003
offset_top = -22.026001
offset_right = 62.505997
offset_bottom = 21.973999
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_n77rl")
theme_override_font_sizes/font_size = 25
text = "CRÃ‰DITS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PanelGameMenu/TButtonNewGame" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="PanelGameMenu/TButtonContinue" to="." method="_on_t_button_continue_pressed"]
[connection signal="pressed" from="PanelGameMenu/TButtonOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="PanelGameMenu/TButtonExit" to="." method="_on_btn_quitter_pressed"]
[connection signal="pressed" from="TButtonTuto" to="." method="_on_btn_tuto_pressed"]
[connection signal="pressed" from="TButtonCredits" to="." method="_on_btn_credits_pressed"]
